<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Surface">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIconTint="@color/text_border"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/settings"/>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include_show_message"
        layout="@layout/include_show_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_show_message">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/borderSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showBorder"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resetButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:text="@string/resetButton"
                    app:icon="@drawable/baseline_reset_24"/>
            </FrameLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gridAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gridAmount_slider_desc"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/gridAmountSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/gridAmount_slider_desc"
                    android:stepSize="1.0"
                    android:valueFrom="1.0"
                    android:valueTo="6.0"
                    app:trackHeight="@dimen/setting_activity_slider_trackHeight"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prefixTextSizeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefix_slider_desc"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/prefixTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/prefix_slider_desc"
                    android:value="16.0"
                    android:valueFrom="0.0"
                    android:valueTo="130.0"
                    app:trackHeight="@dimen/setting_activity_slider_trackHeight"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/placeholderTextSizeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_slider_desc"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/placeholderTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/placeholder_slider_desc"
                    android:value="16.0"
                    android:valueFrom="0.0"
                    android:valueTo="130.0"
                    app:trackHeight="@dimen/setting_activity_slider_trackHeight"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/suffixTextSizeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suffix_slider_desc"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/suffixTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/suffix_slider_desc"
                    android:value="16.0"
                    android:valueFrom="0.0"
                    android:valueTo="130.0"
                    app:trackHeight="@dimen/setting_activity_slider_trackHeight"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateTextSizeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_slider_desc"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/dateTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/date_slider_desc"
                    android:value="16.0"
                    android:valueFrom="0.0"
                    android:valueTo="130.0"
                    app:trackHeight="@dimen/setting_activity_slider_trackHeight"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>